k8s/apps/default/hajimari/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari
spec:
  hostnames:
    - dashboard.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: hajimari
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
